docs/versioned_docs/version-0.7.0/api/mellea/backends/adapters/adapter.mdx
---
title: "mellea.backends.adapters.adapter"
sidebar_label: "mellea.backends.adapters.adapter"
description: "Adapter classes for adding fine-tuned modules to inference backends."
---

Adapter classes for adding fine-tuned modules to inference backends.





The primary public surface is :func:`AdapterMixin.resolve_adapter` (find or lazily
register an adapter by capability name) and :meth:`AdapterMixin._find_adapter`
(look up a registered adapter).  :class:`AdapterMixin` is mixed into backends that
support runtime adapter loading and unloading.

`LocalHFAdapter`, `IntrinsicAdapter`, and `EmbeddedIntrinsicAdapter` are
**deprecation shims** retained for backwards compatibility.  They satisfy
`isinstance(x, _core.Adapter)` but delegate all behaviour to the new dataclass.
`get_adapter_for_intrinsic` is similarly deprecated; prefer `resolve_adapter`.


## Functions

<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />


### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#3064E3]/20 text-[#1D4ED8]">FUNC</span> `get_adapter_for_intrinsic` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.7.0/mellea/backends/adapters/adapter.py#L298" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#get_adapter_for_intrinsic}

```python
get_adapter_for_intrinsic(intrinsic_name: str, intrinsic_adapter_types: list[AdapterType] | tuple[AdapterType, ...], available_adapters: dict[str, T]) -> T | None
```


Find an adapter from a dict of available adapters based on the adapter function name and its allowed adapter types.

**Args:**
- `intrinsic_name`: The name of the adapter function, e.g. `"answerability"`.
- `intrinsic_adapter_types`: The
adapter types allowed for this adapter function, e.g.
`[AdapterType.ALORA, AdapterType.LORA]`.
- `available_adapters`: The available adapters to choose from;
maps `adapter.qualified_name` to the adapter object.

**Returns:**
- T | None: The first matching adapter found, or `None` if no match exists.


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

## Classes

<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />


### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#4ADE8033]/20 text-[#15803D]">CLASS</span> `Adapter` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.7.0/mellea/backends/adapters/adapter.py#L29" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#class-adapter}


An adapter that can be added to a single backend.

An adapter can only be registered with one backend at a time. Use
`adapter.qualified_name` when referencing the adapter after adding it.

**Args:**
- `name`: Human-readable name of the adapter.
- `adapter_type`: Enum describing the adapter type (e.g.
`AdapterType.LORA` or `AdapterType.ALORA`).

**Attributes:**
- `qualified_name`: Unique name used for loading and lookup; formed
as `"<name>_<adapter_type.value>"`.
- `backend`: The backend this adapter has been added to,
or `None` if not yet added.
- `path`: Filesystem path to the adapter weights; set when
the adapter is added to a backend.


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#4ADE8033]/20 text-[#15803D]">CLASS</span> `LocalHFAdapter` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.7.0/mellea/backends/adapters/adapter.py#L63" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#class-localhfadapter}


Abstract adapter subclass for locally loaded Hugging Face model backends.

Subclasses must implement `get_local_hf_path` to return the filesystem path
from which adapter weights should be loaded given a base model name.



<div className="h-8" />
**Methods:**

<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

#### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#3064E3]/20 text-[#1D4ED8]">FUNC</span> `get_local_hf_path` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.7.0/mellea/backends/adapters/adapter.py#L71" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#get_local_hf_path}

```python
get_local_hf_path(self, base_model_name: str) -> str
```

Return the local filesystem path from which adapter weights should be loaded.

**Args:**
- `base_model_name`: The base model name; typically the last component
of the Hugging Face model ID (e.g. `"granite-4.0-micro"`).

**Returns:**
- Filesystem path to the adapter weights directory.


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#4ADE8033]/20 text-[#15803D]">CLASS</span> `IntrinsicAdapter` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.7.0/mellea/backends/adapters/adapter.py#L122" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#class-intrinsicadapter}


Deprecated shim for adapters that implement adapter functions.

.. deprecated::
    Use :class:`~mellea.backends.adapters.Adapter` directly.
    `IntrinsicAdapter` will be removed in a future release (Epic #929,
    issue #1144).

Subtype of :class:`Adapter` for models that:

* implement adapter functions
* are packaged as LoRA or aLoRA adapters on top of a base model
* use the shared model loading code in `mellea.formatters.granite.intrinsics`
* use the shared input and output processing code in
  `mellea.formatters.granite.intrinsics`

**Args:**
- `intrinsic_name`: Name of the adapter function (e.g. `"answerability"`);
the adapter's `qualified_name` will be derived from this.
- `adapter_type`: Enum describing the adapter type; defaults to
`AdapterType.ALORA`.
- `config_file`: Path to a YAML config file defining
the adapter function's I/O transformations; mutually exclusive with
`config_dict`.
- `config_dict`: Dict defining the adapter function's I/O
transformations; mutually exclusive with `config_file`.
- `base_model_name`: Base model name used to look up the I/O
processing config when neither `config_file` nor `config_dict` are
provided.

**Attributes:**
- `intrinsic_name`: Name of the adapter function this adapter implements.
- `intrinsic_metadata`: Catalog metadata for the adapter function.
- `base_model_name`: Base model name provided at construction, if any.
- `adapter_type`: The adapter type (`LORA` or `ALORA`).
- `config`: Parsed I/O transformation configuration for the adapter function.

.. note::
    `identity`, `io_contract`, and `weights` are Phase 1 internal scaffolding
    populated in `__init__` to satisfy the new :class:`~mellea.backends.adapters.Adapter`
    protocol.  They are not meaningful consumer-facing attributes; `io_contract` and
    `weights` raise :exc:`NotImplementedError` and will be replaced in Phase 2
    (issues #1137, #1138).



<div className="h-8" />
**Methods:**

<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

#### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#3064E3]/20 text-[#1D4ED8]">FUNC</span> `get_local_hf_path` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.7.0/mellea/backends/adapters/adapter.py#L258" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#get_local_hf_path}

```python
get_local_hf_path(self, base_model_name: str) -> str
```

Return the local filesystem path from which adapter weights should be loaded.

Downloads the adapter weights if they are not already cached locally.

**Args:**
- `base_model_name`: The base model name; typically the last component
of the Hugging Face model ID (e.g. `"granite-3.3-8b-instruct"`).

**Returns:**
- Filesystem path to the downloaded adapter weights directory.


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

#### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#3064E3]/20 text-[#1D4ED8]">FUNC</span> `download_and_get_path` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.7.0/mellea/backends/adapters/adapter.py#L272" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#download_and_get_path}

```python
download_and_get_path(self, base_model_name: str) -> str
```

Download the required adapter function files if necessary and return the path to them.

**Args:**
- `base_model_name`: the base model; typically the last part of the Hugging Face
model id like "granite-3.3-8b-instruct"

**Returns:**
- a path to the files


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#4ADE8033]/20 text-[#15803D]">CLASS</span> `AdapterMixin` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.7.0/mellea/backends/adapters/adapter.py#L326" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#class-adaptermixin}


Mixin class for backends capable of utilizing adapters.

**Attributes:**
- `base_model_name`: The short model name used to identify adapter
variants (e.g. `"granite-3.3-8b-instruct"` for
`"ibm-granite/granite-3.3-8b-instruct"`).



<div className="h-8" />
**Methods:**

<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

#### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#3064E3]/20 text-[#1D4ED8]">FUNC</span> `base_model_name` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.7.0/mellea/backends/adapters/adapter.py#L337" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#base_model_name}

```python
base_model_name(self) -> str
```

Return the short model name used for adapter variant lookup.

**Returns:**
- The base model name (e.g. `"granite-3.3-8b-instruct"`).


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

#### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#3064E3]/20 text-[#1D4ED8]">FUNC</span> `add_adapter` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.7.0/mellea/backends/adapters/adapter.py#L345" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#add_adapter}

```python
add_adapter(self, *args, **kwargs)
```

Register an adapter with this backend so it can be loaded later.

The adapter must not already have been added to a different backend.

**Args:**
- `args`: Positional arguments forwarded to the concrete implementation.
- `kwargs`: Keyword arguments forwarded to the concrete implementation.


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

#### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#3064E3]/20 text-[#1D4ED8]">FUNC</span> `load_adapter` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.7.0/mellea/backends/adapters/adapter.py#L356" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#load_adapter}

```python
load_adapter(self, adapter_qualified_name: str)
```

Load a previously registered adapter into the underlying model.

The adapter must have been registered via `add_adapter` before calling
this method.

**Args:**
- `adapter_qualified_name`: The `adapter.qualified_name` of the
adapter to load.


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

#### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#3064E3]/20 text-[#1D4ED8]">FUNC</span> `unload_adapter` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.7.0/mellea/backends/adapters/adapter.py#L368" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#unload_adapter}

```python
unload_adapter(self, adapter_qualified_name: str)
```

Unload a previously loaded adapter from the underlying model.

**Args:**
- `adapter_qualified_name`: The `adapter.qualified_name` of the
adapter to unload.


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

#### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#3064E3]/20 text-[#1D4ED8]">FUNC</span> `list_adapters` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.7.0/mellea/backends/adapters/adapter.py#L377" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#list_adapters}

```python
list_adapters(self) -> list[str]
```

Return the qualified names of all adapters currently loaded in this backend.

**Returns:**
- list\[str]: Qualified adapter names for all adapters that have been
loaded via `load_adapter`.

**Raises:**
- `NotImplementedError`: If the concrete backend subclass has not
implemented this method.


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

#### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#3064E3]/20 text-[#1D4ED8]">FUNC</span> `resolve_adapter` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.7.0/mellea/backends/adapters/adapter.py#L392" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#resolve_adapter}

```python
resolve_adapter(self, name: str) -> _AdapterCore
```

Find or lazily register an adapter by capability name.

Default implementation preserves Phase 0 behaviour, using the internal
`_added_adapters` dict that concrete backends maintain.  Override in
Phase 2 (issue #1138) to implement proper lifecycle management.

**Args:**
- `name`: Capability name (e.g. `"answerability"`).

**Returns:**
- The registered adapter with the given capability.

**Raises:**
- `ValueError`: If the backend has no model ID.
- `KeyError`: If the adapter cannot be found after registration.


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

#### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#3064E3]/20 text-[#1D4ED8]">FUNC</span> `adapter_scope` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.7.0/mellea/backends/adapters/adapter.py#L460" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#adapter_scope}

```python
adapter_scope(self, adapter: '_AdapterCore | None')
```

Context manager wrapping adapter activation and deactivation.

Phase 1 stub — yields immediately (no-op). Phase 2 (issue #1138) wires
in `adapter.weights.activate()` and `adapter.weights.deactivate()`.

**Args:**
- `adapter`: The adapter to activate, or `None` (no-op in Phase 1).


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#4ADE8033]/20 text-[#15803D]">CLASS</span> `EmbeddedIntrinsicAdapter` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.7.0/mellea/backends/adapters/adapter.py#L503" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#class-embeddedintrinsicadapter}


Deprecated shim for adapter functions embedded in a Granite Switch model.

.. deprecated::
    Use :class:`~mellea.backends.adapters.Adapter` directly.
    `EmbeddedIntrinsicAdapter` will be removed in a future release
    (Epic #929, issue #1144).

Unlike PEFT-based adapters that are loaded into the model at runtime,
embedded adapters are already baked into the model weights and activated
via control tokens injected by the model's chat template.  Only the I/O
transformation config (`io.yaml`) is needed; no adapter weights are
downloaded or loaded.

**Args:**
- `intrinsic_name`: Name of the adapter function (e.g. `"answerability"`).
- `config`: Parsed I/O transformation configuration (from `io.yaml`).
- `technology`: Adapter technology in the switch model — `"lora"` or
`"alora"`.  Determines where the control token is placed in the
chat template (beginning of sequence for LoRA, before generation
prompt for aLoRA).

**Attributes:**
- `intrinsic_name`: Name of the adapter function this adapter implements.
- `config`: Parsed I/O transformation configuration.
- `technology`: `"lora"` or `"alora"`.

.. note::
    `identity`, `io_contract`, and `weights` are Phase 1 internal scaffolding
    populated in `__init__` to satisfy the new :class:`~mellea.backends.adapters.Adapter`
    protocol.  They are not meaningful consumer-facing attributes; `io_contract` and
    `weights` raise :exc:`NotImplementedError` and will be replaced in Phase 2
    (issues #1137, #1138).



<div className="h-8" />
**Methods:**

<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

#### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#3064E3]/20 text-[#1D4ED8]">FUNC</span> `from_model_directory` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.7.0/mellea/backends/adapters/adapter.py#L585" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#from_model_directory}

```python
from_model_directory(model_path: str | pathlib.Path, intrinsic_name: str | None = None) -> list['EmbeddedIntrinsicAdapter']
```

Load embedded adapters from a Granite Switch model directory.

Reads `adapter_index.json` and the corresponding `io_configs/*/io.yaml`
files from the model directory.

**Args:**
- `model_path`: Path to a Granite Switch model
directory that contains `adapter_index.json` and `io_configs/`.
- `intrinsic_name`: If provided, only load the adapter
matching this adapter function name. `None` loads all adapters.

**Returns:**
- list[EmbeddedIntrinsicAdapter]: One adapter per entry in the index.

**Raises:**
- `FileNotFoundError`: If `adapter_index.json` is missing.
- `ValueError`: If an `io.yaml` file listed in the index cannot be found
or if no adapters are found.


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

#### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#3064E3]/20 text-[#1D4ED8]">FUNC</span> `from_hub` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.7.0/mellea/backends/adapters/adapter.py#L663" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#from_hub}

```python
from_hub(repo_id: str, revision: str = 'main', cache_dir: str | None = None, intrinsic_name: str | None = None) -> list['EmbeddedIntrinsicAdapter']
```

Load embedded adapters from a Granite Switch model on Hugging Face Hub.

Downloads `adapter_index.json` and the `io_configs/` directory, then
delegates to :meth:`from_model_directory`.

**Args:**
- `repo_id`: Hugging Face Hub repository ID
(e.g. `"ibm-granite/granite-switch-micro"`).
- `revision`: Git revision to download from.
- `cache_dir`: Local cache directory; `None` for the default.
- `intrinsic_name`: If provided, only load the adapter
matching this adapter function name. `None` loads all adapters.

**Returns:**
- list[EmbeddedIntrinsicAdapter]: One adapter per entry in the index.

**Raises:**
- `ImportError`: If `huggingface_hub` is not installed.
- `FileNotFoundError`: If `adapter_index.json` is missing (delegated
from \:meth\:`from_model_directory`).
- `ValueError`: If no adapters are found (delegated from
\:meth\:`from_model_directory`).


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

#### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#3064E3]/20 text-[#1D4ED8]">FUNC</span> `from_source` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.7.0/mellea/backends/adapters/adapter.py#L718" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#from_source}

```python
from_source(source: str, revision: str = 'main', cache_dir: str | None = None, intrinsic_name: str | None = None) -> list['EmbeddedIntrinsicAdapter']
```

Load embedded adapters from a local directory or Hugging Face Hub.

Automatically detects whether `source` is a local filesystem path
or a Hugging Face Hub repo ID, and delegates accordingly.

**Args:**
- `source`: Local path to a model directory, or a Hugging Face
Hub repo ID (e.g. `"ibm-granite/granite-switch-micro"`).
- `revision`: Git revision (only used for Hub downloads).
- `cache_dir`: Cache directory (only used for Hub downloads).
- `intrinsic_name`: If provided, only load the adapter
matching this adapter function name. `None` loads all adapters.

**Returns:**
- list\[EmbeddedIntrinsicAdapter]: One adapter per entry in the index.


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#4ADE8033]/20 text-[#15803D]">CLASS</span> `CustomIntrinsicAdapter` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.7.0/mellea/backends/adapters/adapter.py#L752" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#class-customintrinsicadapter}


Deprecated shim for user-defined custom adapter functions.

.. deprecated::
    Use :class:`~mellea.backends.adapters.Adapter` directly.
    `CustomIntrinsicAdapter` will be removed in a future release
    (Epic #929, issue #1144).

This class has the same functionality as `IntrinsicAdapter`, except that
its constructor monkey-patches Mellea global variables to enable the backend
to load the user's adapter.

**Args:**
- `model_id`: The Hugging Face model ID used for downloading model weights;
expected format is `"<user-id>/<repo-name>"`.
- `intrinsic_name`: Catalog name for the adapter function; defaults to the
repository name portion of `model_id` if not provided.
- `base_model_name`: The short name of the base model (NOT its repo ID).

<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />
